force-app/main/default/objects/copado__Project__c/copado__Project__c.object-meta.xml
<CustomObject>
    <description>Overall object for capturing the project details.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>