force-app/main/default/objects/copado__Project__c/fields/Change_Management_Integration__c.field-meta.xml
<CustomField>
    <fullName>Change_Management_Integration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Change Management Integration</label>
    <referenceTo>Change_Management_Integration_Credential__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>