force-app/main/default/objects/copado__Project__c/fields/copado__Deployment_Flow__c.field-meta.xml
<CustomField>
    <fullName>copado__Deployment_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Flow</label>
    <referenceTo>copado__Deployment_Flow__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>