force-app/main/default/objects/copado__Project__c/fields/copado__Index_Metadata__c.field-meta.xml
<CustomField>
    <fullName>copado__Index_Metadata__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When this field is checked, Copado will index the metadata selected against the user stories into the User Story Metadata custom object. Indexed metadata can be used for reporting and compliance, and it&#39;s also used by Copado overlap awareness feature.</inlineHelpText>
    <label>Index Metadata</label>
    <type>Checkbox</type>
</CustomField>