force-app/main/default/objects/copado__Project__c/fields/Workspace_Id__c.field-meta.xml
<CustomField>
    <fullName>Workspace_Id__c</fullName>
    <inlineHelpText>For Rally, the workspace ID is required in addition to the External Project Id.</inlineHelpText>
    <label>Workspace Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>